Entrega3/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pawmap-app
  labels:
    app: pawmap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pawmap
  template:
    metadata:
      labels:
        app: pawmap
    spec:
      serviceAccountName: pawmap-sa
      containers:
        - name: pawmap-app
          image: us-east1-docker.pkg.dev/project-f7af048a-a298-4d12-b7e/pawmap-repo/pawmap-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
