Entrega3/k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pawmap-worker
  labels:
    app: pawmap-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pawmap-worker
  template:
    metadata:
      labels:
        app: pawmap-worker
    spec:
      serviceAccountName: pawmap-sa
      containers:
        - name: pawmap-worker
          image: us-east1-docker.pkg.dev/project-f7af048a-a298-4d12-b7e/pawmap-repo/pawmap-app:latest
          imagePullPolicy: Always
          command: ["php", "bin/worker.php"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
