Entrega3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pawmap-service
spec:
  selector:
    app: pawmap
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
