Entrega3/k8s/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pawmap-websocket-service
spec:
  selector:
    app: pawmap-ws
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
