Entrega3/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pawmap-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pawmap.lat
      secretName: pawmap-tls
  rules:
    - host: pawmap.lat
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: pawmap-websocket-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pawmap-service
                port:
                  number: 80
